fixed uneven amount of pixels around logo, set catagories to width 68%

--- a/src/app/components/home-category-row/home-category-row.component.scss
+++ b/src/app/components/home-category-row/home-category-row.component.scss
@@ -1,7 +1,7 @@
 $hellenicblue: rgb(0, 140, 255);
 .category-row {
     font-weight: bold;
-    width: 85%;
+    width: 68%;
     display: flex;
     justify-content: space-between;
     margin-left: auto;
