--- a/src/app/components/navbar-category-search/navbar-category-search.component.scss
+++ b/src/app/components/navbar-category-search/navbar-category-search.component.scss
@@ -257,7 +257,7 @@ $hellenicblue: rgb(0, 140, 255);
         visibility: visible;
         display: flex;
         height: 80px;
-        padding: 2px;
+        padding: 3px;
     }
     .category-bar {
         width: 100%!important;
